# terminal

./: .gitignore  Cargo.toml  README.md  config.example.toml
packaging/: Info.plist  build-app.sh
shaders/: cell.wgsl
src/: config.rs  input.rs  linkify.rs  main.rs  menu.rs  pty.rs  settings_ui.rs  status.rs  tab.rs
src/render/: chrome.rs  font.rs  mod.rs  pipeline.rs
src/settings_ui/: themes.rs
src/term/: color.rs  grid.rs  mod.rs  perform.rs
